--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "excel",
     "markdown"
   ],
-  "repository": "https://github.com/swinton/tsv-to-md",
+  "repository": "https://github.com/jedrington/tsv-to-md",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
